--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 /*
-    Adaptado. Segundos cambios
+    Adaptado. Segundos cambios. 
+    Terceros canbios
 	Linear by TEMPLATED
     templated.co @templatedco
     Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
